ignore wc hangul results